--- a/estilo.css
+++ b/estilo.css
@@ -22,9 +22,9 @@ body {
 .contenedor-header {
   width: 100%;
   position: fixed;
-  background-color: rgba(239, 156, 239, 0.3);
-  z-index: 2;
+  background-color: rgba(85, 22, 85, 0.794);
   padding: 0 20px;
+  z-index: 1;
 }
 .contenedor-header header {
   max-width: 1100px;
@@ -53,6 +53,7 @@ body {
 .contenedor-header header nav a {
   display: inline-block;
   text-decoration: none;
+  font-size: 25px;
   color: #fff;
   padding: 5px;
   text-transform: uppercase;
@@ -71,11 +72,16 @@ body {
 
 .inicio {
   height: 100vh;
-  background: url(img/banner-principal.jpg);
-  opacity: 0.8;
+  background: linear-gradient(to bottom, rgba(245, 246, 252, 0.555), rgba(106, 34, 88, 0.846)),
+  url(img/banner-principal.jpg);
   background-size: cover;
   background-position: center center;
   position: relative;
+}
+
+.info h2{
+  font-size: 5rem;
+  color: #710982d8;
 }
 
 .info h4 p {
@@ -83,45 +89,47 @@ body {
   z-index: 1;
 }
 
-.inicio .contenido-seccion {
-  max-width: 1100px;
-  margin: auto;
+.inicio {
+  padding-top: 5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .inicio .info {
   width: fit-content;
-  margin: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 80px;
   text-align: center;
 }
+
 .inicio .info h4 {
   font-size: 2rem;
   letter-spacing: 3px;
 }
+
 .inicio .info p {
   margin: 20px;
-  color: #000000;
-  font-size: 16px;
-  letter-spacing: 3px;
+  color: #ffffff;
+  font-size: 25px;
+  letter-spacing: 4px;
   text-transform: uppercase;
 }
 
-.opciones {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.inicio .opciones .opcion {
-  border-top: 2px solid #797e8e;
-  padding: 7px;
-  color: #797e8e;
-  margin: 0 20px;
+
+.inicio #btn-inicio {
+  font-size: 24px;
+  padding: 17px;
+  width: 150px;
+  color: #fff;
+  background-color: #a403c8;
+  margin-top: 60px;
+  border-radius: 12px;
+  cursor: pointer;
 }
 
 /*-------------------------------------- SECCION PRODUCTOS -----------------------------------*/
