--- a/estilo.css
+++ b/estilo.css
@@ -2,7 +2,7 @@
 
 :root {
   --principal: #cf92f2;
-  --backgroung-global: #ece8ee;
+  --backgroung-global: #ffedfd;
   --gradient: linear-gradient(to bottom, #8d13a0, #ffffff);
 }
 
@@ -22,66 +22,207 @@ body {
 .contenedor-header {
   width: 100%;
   position: fixed;
-  background-color: rgba(85, 22, 85, 0.794);
+  background-color: rgba(239, 156, 239, 0.3);
+  z-index: 2;
   padding: 0 20px;
-  z-index: 1;
 }
+
 .contenedor-header header {
-  max-width: 1100px;
-  margin: auto;
-  width: 100%;
+  max-width: 1500px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  color: #fff;
 }
 
 .contenedor-header #logo {
-  width: 90px;
-  height: 90px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   background-size: 100% auto;
   cursor: pointer;
 }
 
-.contenedor-header img {
-  width: 50px;
-  height: 50px;
+.whatsapp {
+  position: fixed;
+  right: 40px;
+  bottom: 30px;
+}
+
+.whatsapp img {
+  width: 80px;
+  height: 80px;
+}
+
+.contenedor-header #burguer-menu {
+  display: none;
+}
+
+.contenedor-header header nav {
+  display: flex;
+  gap: 40px;
 }
 
 .contenedor-header header nav a {
   display: inline-block;
   text-decoration: none;
-  font-size: 25px;
-  color: #fff;
+  font-weight: bold;
+  color: #250101;
   padding: 5px;
   text-transform: uppercase;
 }
+
 .contenedor-header header nav a:hover {
   color: #ff1133;
   transform: scale(1.2);
 }
-.contenedor-header header .redes img {
-  text-decoration: none;
-  display: inline-block;
-  padding: 5px 8px;
+
+#cart-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#cart {
+  height: 50px;
+  cursor: pointer;
+  color: #250101;
+}
+
+.count-products {
+  background-color: #46004f;
+  color: snow;
+  padding: 3px;
+}
+
+.container-cart-products {
+  position: absolute;
+  top: 100px;
+  right: 0;
+  background-color: #fff;
+  width: 400px;
+  z-index: 1;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.container-cart-products h3 {
+  text-align: center;
+  font-size: 25px;
+}
+
+.cart-product {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.info-cart-product {
+  display: flex;
+  justify-content: space-between;
+  flex: 0.6;
+  gap: 45px;
+}
+
+.titulo-producto-carrito {
+  font-size: 18px;
+  font-weight: 500;
+  width: 50px;
+  text-align: center;
+}
+
+.precio-producto-carrito {
+  font-weight: 600;
+  font-size: 20px;
+  margin-left: 45px;
+  width: 75px;
+}
+
+.cantidad-producto-carrito {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.icon-close {
+  text-align: center;
+  cursor: pointer;
+  height: 28px;
+  padding: 0 8px;
+  color: #fff;
+  vertical-align: top;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  transition: all 0.3s ease;
+  background: #cc4d29;
+  border-color: #cc4d29;
+  font-weight: 400;
+  font-size: 11px;
+}
+
+.cart-total {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  gap: 20px;
+}
+
+.cart-total h3 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+#totales {
+  display: flex;
+  flex-direction: column;
+}
+
+#totales p {
+  font-size: 20px;
+  font-weight: 600;
+  padding: 8px;
+}
+
+#totales button {
+  font-size: 20px;
+  font-weight: bolder;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color: #b889bf;
+  color: white;
+  margin-top: 18px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+#totales button:hover {
+  background-color: #681975;
+  color: yellow;
+  transform: scaleX(1.12);
+}
+
+#totales span {
+  margin-left: 14px;
+}
+
+.ocultar-carrito {
+  display: none;
+}
+
+.hideElement {
+  display: none;
 }
 
 /* -------------------------SECCIÓN INICIO ---------------------------------*/
 
-.inicio {
+#inicio {
   height: 100vh;
-  background: linear-gradient(to bottom, rgba(245, 246, 252, 0.555), rgba(106, 34, 88, 0.846)),
-  url(img/banner-principal.jpg);
+  background: url(img/banner-principal.jpg);
+  opacity: 0.8;
   background-size: cover;
   background-position: center center;
   position: relative;
-}
-
-.info h2{
-  font-size: 5rem;
-  color: #710982d8;
 }
 
 .info h4 p {
@@ -89,54 +230,72 @@ body {
   z-index: 1;
 }
 
-.inicio {
-  padding-top: 5em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+#inicio .contenido-seccion {
+  max-width: 1100px;
+  margin: auto;
 }
 
-.inicio .info {
+#inicio .info {
   width: fit-content;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 80px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
-.inicio .info h4 {
+#inicio .info h4 {
   font-size: 2rem;
   letter-spacing: 3px;
 }
 
-.inicio .info p {
-  margin: 20px;
-  color: #ffffff;
-  font-size: 25px;
-  letter-spacing: 4px;
+#inicio .info p {
+  margin-top: 40px;
+  color: #000000;
+  font-size: 20px;
+  letter-spacing: 3px;
   text-transform: uppercase;
 }
 
+.opciones {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
-.inicio #btn-inicio {
-  font-size: 24px;
-  padding: 17px;
-  width: 150px;
-  color: #fff;
-  background-color: #a403c8;
-  margin-top: 60px;
-  border-radius: 12px;
-  cursor: pointer;
+#inicio .opciones .opcion {
+  border-top: 2px solid #797e8e;
+  padding: 7px;
+  color: #797e8e;
+  margin: 0 20px;
+}
+
+/* ---------------------------------------NOSOTROS--------------------------- */
+
+#nosotros {
+  background-size: cover;
+  background-color: snow;
+  padding: 130px 20px;
+  text-align: center;
+}
+
+#nosotros .contenedor-titulo .info h2 {
+  font-size: 3rem;
+}
+#nosotros p {
+  padding: 30px 180px;
+  font-size: 30px;
 }
 
 /*-------------------------------------- SECCION PRODUCTOS -----------------------------------*/
 
-.productos {
-  max-width: 1300px;
-  padding: 100px 20px;
+#productos {
+  background-color: snow;
+  padding: 80px 20px;
   position: relative;
   margin: auto;
   display: flex;
@@ -145,7 +304,7 @@ body {
   gap: 150px;
 }
 
-.productos .fila .col1 {
+#productos .fila .col1 {
   width: 100%;
   text-align: center;
   display: flex;
@@ -154,14 +313,14 @@ body {
   gap: 80px;
 }
 
-.productos .fila .col1 img {
-  width: 120%;
+#productos .fila .col1 img {
+  width: 80%;
   display: block;
   margin: auto;
   padding: 20px;
 }
 
-.productos .fila .col2 {
+#productos .fila .col2 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -169,34 +328,179 @@ body {
   gap: 50px;
 }
 
-.productos .fila .col2 .contenedor-titulo .info .frase {
+#productos .fila .col2 .contenedor-titulo .info .frase {
   color: #ff1133;
 }
 
-.productos .fila .col2 .contenedor-titulo .info h2 {
+#productos .fila .col2 .contenedor-titulo .info h2 {
   font-size: 3rem;
 }
 
-.productos .fila .col2 p {
+#productos .fila .col2 p {
   font-size: 30px;
   line-height: 28px;
   text-align: center;
 }
 
-.productos .fila {
+#productos .fila {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 98px;
 }
 
-/*-------------------------------------- SECCION CARDS -----------------------------------*/
-#info-cards {
+/*-------------------------------------- SECCION SHOP -----------------------------------*/
+#shop-container {
+  background-color: #99c4e7;
+  padding: 10px 60px;
+}
+
+.carrito-productos {
+  width: auto;
+  height: auto;
+
+  display: grid;
+  grid: "barra-lateral productos";
+  gap: 8px;
+
+  justify-content: center;
+  margin: 0 20px;
+}
+
+.barra-lateral {
+  grid-area: barra-lateral;
+}
+
+.container-prod {
+  grid-area: productos;
+  margin-top: 25px;
+}
+
+.barra-lateral #list-barra {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 1600px;
+  gap: 30px;
+  padding: 10px 15px;
+}
+
+#list-barra li {
+  padding: 40px 10px;
+  list-style-type: none;
+  display: block;
+}
+
+#list-barra .title-list {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+#list-barra .menu-btn {
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+#list-barra .menu-btn:hover {
+  color: #f7f8b8;
+  background-color: #741313;
+}
+
+.menu-btn.active {
+  background-color: #c171ef;
+  font-style: oblique;
+  color: #fffafa;
+  font-weight: 400;
+  border-radius: 1.5rem;
+}
+
+.titulo-container {
+  text-align: center;
+  font-size: 3rem;
+  color: #2a0483;
+}
+
+#products-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin: 20px 10px;
+  padding: 30px 40px;
+}
+
+.card-cosmetic {
+  height: 600px;
+  max-width: 250px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
+  background-color: #c171ef;
+  border-radius: 5%;
+  padding: 15px;
+  transition: all 0.6s;
+}
+
+.card-cosmetic:hover {
+  transform: translateY(-8px);
+}
+
+.startDiv {
+  height: 450px;
+}
+
+.startDiv img {
+  width: 100%;
+  border-radius: 15%;
+  aspect-ratio: 1;
+  transition: all 0.9s;
+}
+
+.startDiv:hover img {
+  transform: scale(1.15);
+}
+
+.startDiv h3 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1rem;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.startDiv p {
+  font-size: 0.8rem;
+  text-align: center;
+  padding: 10px 15px;
+}
+
+.precioCard h5 {
+  font-size: 2rem;
+  color: #d8ca09;
+  text-align: center;
+}
+
+.precioCard button {
+  margin-top: 1.5rem;
+  height: 30px;
+  width: 120px;
+  font-size: 14px;
+  color: bisque;
+  border: none;
+  font-weight: bolder;
+  background-color: blueviolet;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+/*-------------------------------------- SECCION CARDS -----------------------------------*/
+#info-cards {
+  background-color: snow;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   padding: 100px 20px;
   gap: 40px;
@@ -255,11 +559,10 @@ body {
 
 /* --------------------------------SERVICIOS-------------------------------------- */
 
-.servicios {
+#servicios {
   color: #fff;
   position: relative;
-  background: linear-gradient(#8d13a0, rgba(0, 7, 78, 0.7)),
-    url(img/fondo-servicios.jpg);
+  background: linear-gradient(#8d13a0, rgba(0, 7, 78, 0.7));
   background-size: cover;
   background-position: center center;
   margin: auto;
@@ -268,7 +571,7 @@ body {
   justify-content: center;
   padding: 60px 30px;
 }
-.servicios .info h2 {
+#servicios .info h2 {
   max-width: 1300px;
   margin: auto;
   display: flex;
@@ -278,13 +581,13 @@ body {
   font-size: 3rem;
 }
 
-.servicios img {
+#servicios img {
   width: 50%;
   display: block;
   margin: auto;
 }
 
-.servicios .info p {
+#servicios .info p {
   font-size: 20px;
   margin-bottom: 10px;
   line-height: 35px;
@@ -292,80 +595,109 @@ body {
   padding: 25px;
 }
 
-/* ---------------------------------------NOSOTROS--------------------------- */
-
-.nosotros {
-  width: 90%;
-  background-size: cover;
-  padding: 100px 20px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 50px;
-}
-.nosotros .contenedor-titulo .info h2 {
-  font-size: 3rem;
-}
-.nosotros p {
-  padding: 30px 180px;
-  font-size: 30px;
-}
-
 /* -----------------------------------CONTACTO -------------------------------*/
-.contacto {
+#contacto {
   color: #fff;
   background: var(--gradient);
   background-size: cover;
   background-position: center center;
-  padding: 100px 20px;
-}
-.contacto .contenido-seccion {
-  max-width: 800px;
-  margin: auto;
-}
-
-.contacto .contenedor-titulo {
   display: flex;
   align-items: center;
+  flex-direction: column;
+  padding: 100px 20px;
+}
+
+#contacto .contenido-seccion {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 800px;
+  margin: 2rem;
+}
+
+#contacto .contenedor-titulo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: fit-content;
   margin: auto;
 }
 
-.contacto .contenedor-titulo .info {
-  margin-left: 30px;
-}
-
-.contacto .contenedor-titulo .info h2 {
+#contacto .contenedor-titulo .info h2 {
   font-size: 3rem;
 }
-.contacto .fila {
+
+/* -------------------Contacto Formulario-------------------*/
+
+#contacto .fila1 {
   display: flex;
+}
+
+#contacto .fila1 .col {
   margin-top: 50px;
-  justify-content: space-between;
 }
-.contacto .fila .col {
-  width: 48%;
-}
-.contacto .fila input {
-  width: 100%;
+
+#contacto .fila1 input {
+  width: 90%;
   padding: 15px;
   border: none;
   border-radius: 5px;
   font-size: 20px;
   outline: none;
 }
-.contacto textarea {
+
+#contacto .fila {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  justify-content: space-between;
+}
+
+#contacto .fila .col {
+  width: 48%;
+}
+
+#contacto .fila input {
+  width: 95%;
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  outline: none;
+}
+
+#form .form-empty-field input {
+  border: 5px solid;
+  border-radius: 20px;
+  border-color: #e63124;
+  background-color: #f7bfaf;
+}
+
+#form .form-empty-field #messageArea {
+  border: 5px solid;
+  border-radius: 20px;
+  border-color: #e63124;
+  background-color: #f7bfaf;
+}
+
+.form-empty-field p {
+  font-size: 18px;
+  text-align: center;
+}
+
+#contacto textarea {
   display: block;
-  margin-top: 20px;
+  margin-top: 40px;
   padding: 15px;
   font-size: 20px;
   outline: none;
-  width: 100%;
+  width: 95%;
   height: 200px;
+  text-align: center;
 }
 
-.contacto button {
+#contacto button {
   display: block;
   width: fit-content;
   margin: auto;
@@ -378,21 +710,54 @@ body {
   border-radius: 5px;
   cursor: pointer;
 }
-.contacto .fila-datos {
+
+#form .message-submit {
+  display: none;
+}
+
+#form .showErrorMsj {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 500;
+  color: #270265;
+}
+
+/* ---------------------Contacto Datos ---------------------------*/
+
+#contacto .fila-datos {
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 100px;
+  font-size: 15px;
+  gap: 4rem;
+}
+
+#contacto .fila-datos li {
   color: #000000;
   display: flex;
-  justify-content: center;
-  margin-top: 100px;
-  font-size: 20px;
-  gap: 4rem;
-  text-align: center;
-}
-.contacto .fila-datos li {
-  display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  gap: 8rem;
+  gap: 2rem;
   padding: 20px;
+}
+
+.fila-datos .redes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.fila-datos .redes a {
+  padding: 5px 8px;
+  text-decoration: wavy;
+}
+
+.redes a img {
+  width: 40px;
 }
 
 /*----------------------------------- FOOTER -------------------------------*/
