--- a/responsive_landingpage.css
+++ b/responsive_landingpage.css
@@ -1,12 +1,53 @@
+
+
 @media screen and (max-width: 568px) {
-  .container-prod {
-    margin-top: 25em;
+
+  #nosotros {
+    margin-top: 70px;
+    padding: 20px 0;
+  }
+
+  #nosotros p{
+    padding: 50px 45px;
+    font-size: 20px;
+  }
+
+  #productos{
+    padding: 30px 0;
+  }
+
+  .info-cards-container {
+    width: 250px;
+  }
+
+  .info-cards-container .card {
+    height: 800px;
+  }
+  
+  .info-cards-container .card p{
+    padding: 0;
+  }
+
+
+  .carrito-productos .barra-lateral {
+    margin-bottom: 15em;
   }
 }
 
+/*-----------------------------------------------------------------------------------------------------*/
+
 @media screen and (max-width: 820px) {
-  .container-prod {
-    margin-top: 15em;
+
+  #nosotros p{
+    padding: 50px 45px;
+    font-size: 28px;
+  }
+
+
+  .barra-lateral #list-barra {
+    flex-wrap: wrap;
+    position: absolute;
+    flex-direction: column;
   }
 
   .col input {
@@ -32,7 +73,18 @@
     justify-content: center;
     margin-left: 50px;
   }
+
+  #contacto .fila-datos li {
+    font-weight: 700;
+    justify-content: center;
+  }
+
+  #contacto .fila-datos li strong{
+    display: none;
+  }
 }
+
+/*-----------------------------------------------------------------------------------------------------*/
 
 @media screen and (max-width: 955px) {
   .contenedor-header .responsive {
@@ -68,17 +120,24 @@
     display: none;
   }
 
+  #nosotros p{
+    padding: 70px 45px;
+  }
+
   .carrito-productos {
     display: flex;
+    flex-direction: column;
   }
 
   .carrito-productos .barra-lateral {
+    margin-top: 20px;
     display: flex;
+    justify-content: center;
+    height: 70px;
   }
 
   .barra-lateral #list-barra {
     flex-wrap: wrap;
-    position: absolute;
     flex-direction: row;
   }
 
@@ -96,12 +155,12 @@
     border-radius: 30px;
   }
 
-  .container-prod {
-    margin-top: 5em;
+  #info-cards {
+    gap: 90px;
   }
 
   #servicios {
-    padding: 5px 0;
+    padding: 50px 0;
   }
 
   #servicios .info h2 {
@@ -113,7 +172,10 @@
   }
 }
 
+/*-----------------------------------------------------------------------------------------------------*/
+
 @media screen and (max-width: 1200px) {
+
   .contenedor-header header {
     justify-content: start;
     gap: 35px;
@@ -137,12 +199,22 @@
   }
 
   #productos .fila {
-    display: block;
-    width: 80%;
+    background-color: snow;
+    padding: 80px 50px;
+    position: relative;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 150px;
   }
-
-  #productos .fila .col1 img {
-    width: 30%;
+  
+  #productos .fila .col1 {
+    display: none;
+  }
+  
+  #productos .fila .col2 p {
+    font-size: 25px;
   }
 
   .card-cosmetic {
@@ -198,6 +270,8 @@
     margin-bottom: 10px;
   }
 }
+
+/*-----------------------------------------------------------------------------------------------------*/
 
 @media screen and (min-width: 1600px) {
   body {
