--- a/responsive_landingpage.css
+++ b/responsive_landingpage.css
@@ -16,6 +16,10 @@
     padding: 30px 0;
   }
 
+  .card-cosmetic {
+    height: 415px;
+  }
+
   .info-cards-container {
     width: 250px;
   }
@@ -54,13 +58,13 @@
     width: 100%;
   }
 
-  #contacto .fila input {
-    width: 90%;
-  }
+  /* #contacto .fila input { */
+    /* width: 90%; */
+  /* } */
 
-  #contacto textarea {
+  /* #contacto textarea {
     width: 90%;
-  }
+  } */
 
   #contacto .fila1 {
     flex-direction: column;
@@ -69,9 +73,9 @@
   #contacto .formulario {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
-    margin-left: 50px;
+    /* margin-left: 50px; */
   }
 
   #contacto .fila-datos li {
@@ -200,7 +204,7 @@
 
   #productos .fila {
     background-color: snow;
-    padding: 80px 50px;
+    padding: 80px 20px;
     position: relative;
     margin: auto;
     display: flex;
@@ -218,7 +222,7 @@
   }
 
   .card-cosmetic {
-    height: 415px;
+    height: 40%;
   }
 
   .startDiv {
