--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Barlow";
-  border: solid 1px red;
+  border: 1px solid red;
 }
 
 body {
@@ -78,6 +78,21 @@ body {
   transform: scale(1.2);
 }
 
+.cantPCart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6px;
+}
+
+.cantPCart button{
+  padding: 2px 9px;
+  font-size: 20px;
+  font-weight: 600;
+  border: none;
+  background-color: #ffff;
+}
+
 #cart-container {
   display: flex;
   justify-content: space-around;
@@ -115,15 +130,17 @@ body {
 .cart-product {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
+  align-items: center;
+  padding: 20px 50px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .info-cart-product {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex: 0.6;
-  gap: 45px;
+  gap: 50px;
 }
 
 .titulo-producto-carrito {
@@ -145,21 +162,6 @@ body {
   font-size: 20px;
 }
 
-.icon-close {
-  text-align: center;
-  cursor: pointer;
-  height: 28px;
-  padding: 0 8px;
-  color: #fff;
-  vertical-align: top;
-  border-radius: 3px;
-  border: 1px solid transparent;
-  transition: all 0.3s ease;
-  background: #cc4d29;
-  border-color: #cc4d29;
-  font-weight: 400;
-  font-size: 11px;
-}
 
 .cart-total {
   display: flex;
@@ -204,7 +206,7 @@ body {
 }
 
 #totales span {
-  margin-left: 14px;
+  margin-left: 6px;
 }
 
 .ocultar-carrito {
@@ -296,7 +298,7 @@ body {
 
 #productos {
   background-color: snow;
-  padding: 130px 20px;
+  padding: 80px 20px;
   position: relative;
   margin: auto;
   display: flex;
@@ -398,7 +400,6 @@ body {
 
 #list-barra .menu-btn {
   font-size: 1.5em;
-  font-weight: 600;
   cursor: pointer;
 }
 
@@ -432,7 +433,7 @@ body {
 }
 
 .card-cosmetic {
-  height: 600px;
+  height: auto;
   max-width: 250px;
   display: flex;
   flex-wrap: wrap;
@@ -514,9 +515,8 @@ body {
   text-align: center;
 }
 
-#info-cards > p {
+#info-cards p {
   width: 80%;
-  font-size: 25px;
   text-align: center;
 }
 
@@ -532,11 +532,6 @@ body {
   gap: 50px;
 }
 
-.info-cards-container .card p{
-  font-size: 21px;
-  padding: 0 30px;
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -544,8 +539,8 @@ body {
   align-items: center;
   text-align: center;
   width: 400px;
-  height: 600px;
-  gap: 30px;
+  height: 570px;
+  gap: 20px;
   border-radius: 10px;
   padding: 25px 15px;
   background: var(--principal);
@@ -632,6 +627,10 @@ body {
   margin: auto;
 }
 
+#contacto .contenedor-titulo .info {
+  margin-left: 30px;
+}
+
 #contacto .contenedor-titulo .info h2 {
   font-size: 3rem;
 }
@@ -647,7 +646,7 @@ body {
 }
 
 #contacto .fila1 input {
-  /* width: 90%; */
+  width: 90%;
   padding: 15px;
   border: none;
   border-radius: 5px;
@@ -667,7 +666,7 @@ body {
 }
 
 #contacto .fila input {
-  /* width: 95%; */
+  width: 95%;
   padding: 15px;
   border: none;
   border-radius: 5px;
@@ -700,7 +699,7 @@ body {
   padding: 15px;
   font-size: 20px;
   outline: none;
-  width: 100%;
+  width: 95%;
   height: 200px;
   text-align: center;
 }
@@ -719,7 +718,7 @@ body {
   cursor: pointer;
 }
 
-#form .message-submit {
+#form .message-submit{
   display: none;
 }
 
@@ -745,11 +744,10 @@ body {
 
 #contacto .fila-datos li {
   color: #000000;
-  font-size: 25px;
   display: flex;
   justify-content: start;
   align-items: center;
-  gap: 5rem;
+  gap: 2rem;
   padding: 20px;
 }
 
