--- a/responsive_landingpage.css
+++ b/responsive_landingpage.css
@@ -1,23 +1,87 @@
 
+@media screen and (max-width: 348px) {
+
+  #inicio .info {
+    width: 200px;
+  }
+
+  .contenedor-titulo .info h2 {
+    font-size: 20px;
+  }
+
+  #contacto .formulario{
+    width: 200px;
+  }
+
+  #contacto textarea {
+    width: 200px;
+  }
+
+
+}
+
 
 @media screen and (max-width: 568px) {
+  .contenedor-header {
+    padding: 0;
+  }
+
+  #cart-container img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .cart-product{
+    padding: 15px 10px;
+  }
+
+  .cart-product .nomb-precio {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .info-cart-product {
+    gap: 50px;
+  }
+
+  .nomb-precio .precio-producto-carrito{
+    margin-left: 0;
+  }
+
+  #inicio .info h4 {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .container-cart-products {
+    width: 220px;
+  }
 
   #nosotros {
     margin-top: 70px;
     padding: 20px 0;
   }
 
-  #nosotros p{
+  #nosotros p {
     padding: 50px 45px;
     font-size: 20px;
   }
 
-  #productos{
+  #productos {
     padding: 30px 0;
   }
 
-  .card-cosmetic {
-    height: 415px;
+  #productos .fila {
+    padding: 50px 0;
+  }
+
+  .contenedor-titulo .info p {
+    font-size: 20px;
+    padding: 20px;
+  }
+
+  #info-cards p {
+    font-size: 25px;
   }
 
   .info-cards-container {
@@ -25,28 +89,57 @@
   }
 
   .info-cards-container .card {
-    height: 800px;
-  }
-  
-  .info-cards-container .card p{
-    padding: 0;
+    height: fit-content;
+    width: 230px;
   }
 
+  .info-cards-container .card h3 {
+    font-size: 15px;
+  }
+
+  .info-cards-container .card p {
+    display: none;
+  }
 
   .carrito-productos .barra-lateral {
     margin-bottom: 15em;
   }
+
+  .container-prod {
+    margin-top: 130px;
+  }
+
+  #shop-container,
+  #products-container {
+    padding: 0;
+  }
+
+  .card-cosmetic {
+    max-width: 200px;
+  }
+  /* #products-container .card-cosmetic {
+    /* width: auto; */
+  /* }  */
+
+  .startDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .startDiv img {
+    width: 70%;
+  }
+
 }
 
 /*-----------------------------------------------------------------------------------------------------*/
 
 @media screen and (max-width: 820px) {
-
-  #nosotros p{
+  #nosotros p {
     padding: 50px 45px;
-    font-size: 28px;
+    font-size: 25px;
   }
-
 
   .barra-lateral #list-barra {
     flex-wrap: wrap;
@@ -58,14 +151,6 @@
     width: 100%;
   }
 
-  /* #contacto .fila input { */
-    /* width: 90%; */
-  /* } */
-
-  /* #contacto textarea {
-    width: 90%;
-  } */
-
   #contacto .fila1 {
     flex-direction: column;
   }
@@ -73,9 +158,7 @@
   #contacto .formulario {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: center;
-    /* margin-left: 50px; */
   }
 
   #contacto .fila-datos li {
@@ -83,7 +166,7 @@
     justify-content: center;
   }
 
-  #contacto .fila-datos li strong{
+  #contacto .fila-datos li strong {
     display: none;
   }
 }
@@ -103,7 +186,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 4rem;
+    gap: 3rem;
   }
 
   #nav a {
@@ -124,7 +207,7 @@
     display: none;
   }
 
-  #nosotros p{
+  #nosotros p {
     padding: 70px 45px;
   }
 
@@ -134,7 +217,6 @@
   }
 
   .carrito-productos .barra-lateral {
-    margin-top: 20px;
     display: flex;
     justify-content: center;
     height: 70px;
@@ -159,6 +241,7 @@
     border-radius: 30px;
   }
 
+
   #info-cards {
     gap: 90px;
   }
@@ -179,7 +262,6 @@
 /*-----------------------------------------------------------------------------------------------------*/
 
 @media screen and (max-width: 1200px) {
-
   .contenedor-header header {
     justify-content: start;
     gap: 35px;
@@ -203,40 +285,31 @@
   }
 
   #productos .fila {
-    background-color: snow;
-    padding: 80px 20px;
     position: relative;
     margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     gap: 150px;
   }
-  
+
   #productos .fila .col1 {
     display: none;
   }
-  
+
   #productos .fila .col2 p {
     font-size: 25px;
   }
 
-  .card-cosmetic {
-    height: 40%;
-  }
-
-  .startDiv {
+  /* .startDiv {
     height: 100px;
-  }
+  } */
 
   .startDiv p {
     display: none;
   }
 
-  .precioCard {
+  /* .precioCard {
     margin-top: 11em;
     height: 100px;
-  }
+  } */
 
   #servicios {
     display: block;
